tests/rosetta/out/Haskell/anti-primes.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/anti-primes.hs:135:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/anti-primes.hs:131:1
                 /workspace/mochi/tests/rosetta/out/Haskell/anti-primes.hs:135:1
    |
135 | main = do
    | ^^^^
